--- a/style/global.css
+++ b/style/global.css
@@ -1,4 +1,7 @@
 @import url(./user.css);
+@import url(./social.css);
+@import url(./about.css);
+@import url(./projects.css);
 * {
   padding: 0px;
   margin: 0px;
@@ -39,9 +42,9 @@ body {
   margin: 160px auto 100px;
 }
 
-section {
+/*section {
   height: 400px;
-}
+} Não mais, era na construção*/
 
 .projects {
   grid-column: 1/3;
@@ -51,6 +54,11 @@ section {
   border-radius: 12px;
   background: var(--background-card);
   box-shadow: var(--shadow-card);
+}
+
+.subtitle {
+  font-size: 28px;
+  font-weight: 600;
 }
 
 .subtitle {
