--- a/style/projects.css
+++ b/style/projects.css
@@ -2,3 +2,48 @@
   padding: 32px 40px;
   grid-column: 1/3;
 }
+
+.project_content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 32px;
+
+  margin-top: 16px; /*afastando a div do h2.*/
+}
+
+.project {
+  /*todos os elementos ficaram em baixo e alinhado ao centro.*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 12px; /*afastar cada item*/
+
+  width: 100%; /*tamanho de 100% cada link.*/
+
+  overflow: hidden; /*pegar os cantos arrendondados do card.*/
+  text-decoration: none; /*tirando o sublinhado dos links.*/
+
+  border-radius: 6px;
+  padding-bottom: 12px; /*afastar da borda de baixo.*/
+  border: 1px solid var(--background-body);
+}
+
+/*editando as imagens do cards.*/
+.project picture {
+  width: 100%;
+  height: 220px;
+}
+
+.project picture img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /*impedir que a imagem seja distorcida.*/
+}
+
+.picture strong {
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--secondary);
+
+  padding: 0 18px;
+}
